// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should also handle on click instead of hover 1`] = `
[
  <article
    className="tooltip tooltip--click"
    onClick={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      <span
        className=""
      >
        Hinweis grüm!
      </span>
    </span>
  </article>,
  <article
    className="tooltip tooltip--click"
    onClick={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip tip--component tip--below tip--hidden"
    >
      <article
        className="pa3 gray6 c-gray1"
      >
        <div
          className="f6 ma0 mb2"
        >
          <i
            className="fas fa-home mr2"
          />
          Tooltip mit Überschrift
        </div>
        <p>
          Hier etwas mehr Text. Hier etwas mehr Text. Hier etwas mehr Text.
          <br />
          Hier etwas mehr Text. Hier etwas mehr Text. Hier etwas mehr Text.
        </p>
        <div>
          <a
            href="https://www.phoenixreisen.com"
          >
            Zu Phoenix Reisen
          </a>
        </div>
      </article>
    </span>
  </article>,
]
`;

exports[`Tooltip should also render React Components as tooltip 1`] = `
<article
  className="tooltip "
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="tooltip-text"
  >
    Ich bin ein Tooltip
  </span>
  <span
    className="tip tip--component tip--below tip--hidden"
  >
    <article
      className="pa3 gray6 c-gray1"
    >
      <div
        className="f6 ma0 mb2"
      >
        <i
          className="fas fa-home mr2"
        />
        Tooltip mit Überschrift
      </div>
      <p>
        Hier etwas mehr Text. Hier etwas mehr Text. Hier etwas mehr Text.
        <br />
        Hier etwas mehr Text. Hier etwas mehr Text. Hier etwas mehr Text.
      </p>
      <div>
        <a
          href="https://www.phoenixreisen.com"
        >
          Zu Phoenix Reisen
        </a>
      </div>
    </article>
  </span>
</article>
`;

exports[`Tooltip should have some default classes 1`] = `
<article
  className="tooltip "
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="tooltip-text"
  >
    Tooltip
  </span>
  <span
    className="tip  tip--below tip--hidden"
  >
    <span
      className=""
    >
      Hinweis!
    </span>
  </span>
</article>
`;

exports[`Tooltip should render colors 1`] = `
[
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      <span
        className="tip--colored danger"
      >
        Hinweis grüm!
      </span>
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      <span
        className="tip--colored success"
      >
        Hinweis grüm!
      </span>
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      <span
        className="tip--colored warning"
      >
        Hinweis grüm!
      </span>
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      <span
        className="tip--colored info"
      >
        Hinweis grüm!
      </span>
    </span>
  </article>,
]
`;

exports[`Tooltip should render positions 1`] = `
[
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--left tip--hidden"
    >
      <span
        className=""
      >
        Hinweis left!
      </span>
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--right tip--hidden"
    >
      <span
        className=""
      >
        Hinweis rechts!
      </span>
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      <span
        className=""
      >
        Hinweis drunter!
      </span>
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--above tip--hidden"
    >
      <span
        className=""
      >
        Hinweis drüber!
      </span>
    </span>
  </article>,
]
`;

exports[`Tooltip should render text with icon 1`] = `
<article
  className="tooltip "
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <i
    className="tooltip-icon fas fas fa-blabla mr2"
  />
  <span
    className="tooltip-text"
  >
    How to live?!
  </span>
  <span
    className="tip  tip--below tip--hidden"
  >
    <span
      className=""
    >
      WORK HARD, PLAY HARD
    </span>
  </span>
</article>
`;
